<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.javaguides</groupId>
  <artifactId>hibernate-crud-examples</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Hibernate CRUD</name>
  <description>Hibernate CRUD</description>
  
  <dependencies>
  	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
  	<dependency>
  		<groupId>mysql</groupId>
  		<artifactId>mysql-connector-java</artifactId>
  		<version>8.0.13</version>
  	</dependency>
  	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
  	<dependency>
  		<groupId>org.hibernate</groupId>
  		<artifactId>hibernate-core</artifactId>
  		<version>5.3.7.Final</version>
  	</dependency>
  	<dependency>
  		<groupId>javax.xml.bind</groupId>
  		<artifactId>jaxb-api</artifactId>
  		<version>2.3.0</version>
  	</dependency>
  </dependencies>
  <build>
	    <plugins>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-compiler-plugin</artifactId>
	            <configuration>
	                <source>1.8</source>
	                <target>1.8</target>
	                <compilerArgs>
      					<arg>--add-modules</arg>
      					<arg>java.xml.bind</arg>
    				</compilerArgs>
	            </configuration>
	        </plugin>
	    </plugins>
	</build>
</project>